package(default_visibility = ["//visibility:public"])

exports_files([
    "aquery.rs",
    "lib.rs",
    "rust_project.rs",
    "bin/discover_rust_project.rs",
    "bin/gen_rust_project.rs",
    "bin/validate.rs",
])

alias(name = "discover_bazel_rust_project", actual = "@rules_rs//tools/rust_analyzer:discover_bazel_rust_project")
alias(name = "gen_rust_project", actual = "@rules_rs//tools/rust_analyzer:gen_rust_project")
alias(name = "validate", actual = "@rules_rs//tools/rust_analyzer:validate")
alias(name = "gen_rust_project_lib", actual = "@rules_rs//tools/rust_analyzer:gen_rust_project_lib")
alias(name = "gen_rust_project_lib_test", actual = "@rules_rs//tools/rust_analyzer:gen_rust_project_lib_test")
alias(name = "gen_rust_project_clippy", actual = "@rules_rs//tools/rust_analyzer:gen_rust_project_clippy")
alias(name = "bzl_lib", actual = "@rules_rs//tools/rust_analyzer:bzl_lib")
