load("//rust:defs.bzl", "rust_library", "rust_proc_macro")
load(":extra_outdirs_test.bzl", "extra_outdirs_test_suite")
load("@bazel_skylib//rules:select_file.bzl", "select_file")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
rust_proc_macro(
    name = "write_outdirs_macro",
    srcs = ["proc_macro.rs"],
    edition = "2018",
    visibility = ["//test:__subpackages__"],
)

rust_library(
    name = "lib",
    srcs = ["lib.rs"],
    edition = "2018",
)

rust_library(
    name = "lib_with_outdirs",
    srcs = ["lib_with_outdirs.rs"],
    edition = "2018",
    extra_outdirs = [
        "test_dir",
        "another_dir",
    ],
    proc_macro_deps = [":write_outdirs_macro"],
    rustc_env = {
        "EXTRA_OUTDIRS": "test_dir,another_dir",
    },
)

extra_outdirs_test_suite(
    name = "extra_outdirs_test_suite",
)

select_file(
    name = "lib_with_outdirs_select_file",
    srcs = ":lib_with_outdirs",
    subpath = "test_dir",
    visibility = ["//visibility:public"],
)

sh_test(
    name = "outdirs_content_test",
    data = [
        ":lib_with_outdirs_select_file",
    ],
    srcs = ["outdirs_content_test.sh"],
    args = [
        "$(rlocationpath :lib_with_outdirs_select_file)",
    ],
    deps = ["@rules_shell//shell/runfiles"],
)
